--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Intro to CSS</title>
+  <style> h2 { backgound-color:#15C8FE;
+
+  }
   <meta charset="utf-8">
 </head>
 <body>
